--- a/CSS & JS/1.css
+++ b/CSS & JS/1.css
@@ -527,6 +527,14 @@ button:hover {
   }
 }
 
+@media (max-width: 550px) {
+  article {
+    width: 100%;
+    font-size: 1rem;
+    padding: 5%;
+  }
+}
+
 .theme {
   position: relative;
   position: fixed;
