Still trying to fix the bug
After debugging using Chrome, it seems the problem is that the scroll is made during the resize and not after. So I called the fadeUp() function 50 milliseconds AFTER resizing wad made.

--- a/CSS & JS/1.css
+++ b/CSS & JS/1.css
@@ -526,7 +526,7 @@ button:hover {
     display: inline-block;
   }
 }
-
+/* idc about height. when WIDTH is under 550px do this: */
 @media (max-width: 550px) {
   article {
     width: 100%;
