--- a/CSS & JS/1.css
+++ b/CSS & JS/1.css
@@ -72,29 +72,38 @@ body {
   position: fixed;
   top: 50%;
   left: 50%;
-  width: 80%;
+  width: 100%;
   height: 100%;
   background-color: darkslategray;
-  transform: translate(-50%, -50%) rotate(30deg) scaleY(2);
+  transform: translate(-50%, -50%) rotate(0deg) scaleY(0.8) scaleX(0.8);
   box-shadow: 2px 2px 10px green;
-  animation: floatIn 5s ease-in-out infinite alternate;
-  transition: all 1s linear;
+  animation: floatIn 8s ease-in-out 1;
 }
 @keyframes floatIn {
-  0% {
-    transform: translate(-50%, -50%) rotate(30deg) scaleY(2);
+  from {
+    transform: translate(-50%, -50%) rotate(30deg) scaleY(2) scaleX(0.8);
   }
-  70% {
-    transform: translate(-50%, -50%) rotate(0deg) scaleY(0.8);
-  }
-  90% {
-    transform: translate(-50%, -50%) rotate(30deg) scaleY(2);
+  to {
+    transform: translate(-50%, -50%) rotate(0deg) scale(0.8);
   }
 }
 
-@media (max-width: 550px), (max-height: 365px) {
+@media (max-width: 550px), (max-height: 380px) {
   .welcome-message {
     font-size: 1.3rem;
     padding: 13%;
   }
+}
+
+.contact a {
+  color: rgb(36, 184, 36);
+  font-weight: bolder;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: black;
+  text-decoration: none;
+  padding: 20px;
+  border-radius: 10px;
+  border: 1px solid rgb(82, 75, 63);
 }
