--- a/CSS & JS/1.css
+++ b/CSS & JS/1.css
@@ -78,6 +78,7 @@ body {
   transform: translate(-50%, -50%) rotate(0deg) scaleY(0.8) scaleX(0.8);
   box-shadow: 2px 2px 10px green;
   animation: floatIn 8s ease-in-out 1;
+  transition: all 2s linear;
 }
 @keyframes floatIn {
   from {
