Added second screen

--- a/CSS & JS/1.css
+++ b/CSS & JS/1.css
@@ -19,9 +19,10 @@ body {
 :root {
   --background-color: rgb(17, 17, 17);
   --name-text-color: wheat;
+  --name-color: rgb(148, 255, 126);
+  --underline-name-color: rgb(148, 255, 126);
 }
 .name {
-  /* position: absolute; */
   height: 100%;
   width: 100%;
   display: grid;
@@ -48,17 +49,10 @@ body {
 
 .span-name {
   font-weight: bolder;
-  border-bottom: 3px dashed rgb(148, 255, 126);
+  border-bottom: 3px dashed var(--underline-name-color);
   padding-bottom: 3px;
   font-size: 1.3em;
-  color: rgb(148, 255, 126);
-  /* font-style: italic; */
-  /* font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif; */
-  /* font-family: "Zen Tokyo Zoo", cursive; */
-  /* font-family: "Otomanopee One", sans-serif; */
-  /* font-family: "Marcellus SC", serif; */
-  /* font-family: "Satisfy", cursive; */
-  /* font-family: "Fredoka One", cursive; */
+  color: var(--name-color);
   font-family: "Merienda", cursive;
 }
 .name a {
@@ -67,7 +61,6 @@ body {
 }
 .float {
   z-index: -1;
-  /* border-radius: 50% 0 0 50%; */
   position: absolute;
   position: fixed;
   top: 50%;
@@ -106,4 +99,27 @@ body {
   padding: 20px;
   border-radius: 10px;
   border: 1px solid rgb(82, 75, 63);
+}
+.second {
+  height: 100vh;
+  background-color: blanchedalmond;
+  display: grid;
+  align-content: center;
+  justify-content: center;
+  justify-items: center;
+}
+div.who {
+  font-size: 3rem;
+  font-family: "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode",
+    Geneva, Verdana, sans-serif;
+  font-weight: bolder;
+}
+p.who {
+  font-size: 1.3rem;
+}
+.gradient {
+  font-weight: bolder;
+  background: linear-gradient(rgb(1, 104, 44), rgb(0, 139, 116));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
