--- a/index.css
+++ b/index.css
@@ -12,6 +12,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  /* problem: CSS doesn't support transition on 'background' (for the linear-background on the 'third' div) */
   transition: background-color 0.3s ease;
 }
 
@@ -158,7 +159,7 @@ body {
   --selection-text-color: var(--seven-color);
   --track-background: #031c22;
   --about-shadow: #fdf9f9 3px 3px 6px 0px inset, #ecd0d0 -3px -3px 6px 1px inset;
-  --typing-effect: rgba(255, 255, 255, 0.75);
+  --typing-effect: rgba(0, 0, 0, 0.75);
   --projects-links-text-hover: var(--one-color);
   --projects-links-text-active: var(--one-color);
   --projects-links-text-visited: var(--one-color);
@@ -450,6 +451,7 @@ article details p a:visited {
     border-right-color: transparent;
   }
 }
+
 @keyframes rightBorder {
   from {
     border-right-color: var(--typing-effect);
@@ -584,6 +586,7 @@ details[open] summary ~ * {
 .theme:not(:last-of-type) {
   margin-right: min(5vw, 18px);
 }
+
 .theme-external-container {
   height: 7rem;
   width: 100%;
