--- a/index.css
+++ b/index.css
@@ -15,6 +15,10 @@ body {
   /* problem: CSS doesn't support transition on 'background' (for the linear-background on the 'third' div) */
   transition: background-color 0.3s ease;
 }
+:focus-visible {
+  outline: 4px dotted var(--six-color);
+  outline-offset: 2px;
+}
 
 :root {
   --one-color: #6dcf66;
@@ -54,6 +58,7 @@ body {
   --work-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px,
     rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
   --contact-img-url: url(./Icons/telegram.png);
+  --contact-after-color: #1c502b;
 }
 
 .teal {
@@ -94,6 +99,7 @@ body {
   --work-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px,
     rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
   --contact-img-url: url(./Icons/telegram-teal.png);
+  --contact-after-color: #1c385f;
 }
 
 .blue {
@@ -131,6 +137,7 @@ body {
   --work-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px,
     rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
   --contact-img-url: url(./Icons/telegram-blue.png);
+  --contact-after-color: #ddeff8;
 }
 
 .pink {
@@ -167,6 +174,7 @@ body {
   --work-shadow: rgba(40, 40, 71, 0.25) 0px 25px 50px -12px,
     rgba(43, 47, 49, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
   --contact-img-url: url(./Icons/telegram-for-pink.png);
+  --contact-after-color: #ff9d9d;
 }
 
 .first {
@@ -304,6 +312,16 @@ body {
   grid-template-columns: max-content max-content;
   align-items: center;
   grid-gap: 15px;
+}
+.contact::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  z-index: -1;
+  background-color: var(--contact-after-color);
+  transform: scale(0, 1);
+  transition: transform 0.3s ease;
+  transform-origin: left;
 }
 
 .contact .img {
@@ -680,11 +698,14 @@ details[open] summary ~ * {
   }
 
   .contact:hover {
-    transition: all 0.1s linear;
+    transition: all 0.3s ease;
     border-radius: 0;
     /* Transparent border, to prevent size from changing: */
     border: 1px solid transparent;
     box-shadow: var(--contact-shadow-hover);
+  }
+  .contact:hover::after {
+    transform: scale(1, 1);
   }
 
   .third .about h1 {
